# coursework_term3

./: CMakeLists.txt  fail1.txt  file.txt  input_from_file.cpp  input_from_file.h  input_from_keyboard.cpp  input_from_keyboard.h  main.cpp  output_to_file.cpp  output_to_file.h  print_DB.cpp  print_DB.h  regex.cpp  regex.h  selection_according_to_conditions.cpp  selection_according_to_conditions.h  sort.cpp  sort.h  struct_exam.cpp  struct_exam.h
