cmake_minimum_required(VERSION 3.26)
project(course_work_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(course_work_2 main.cpp
        struct_exam.cpp
        struct_exam.h
        regex.cpp
        regex.h
        input_from_file.cpp
        input_from_file.h
        print_DB.cpp
        print_DB.h
        input_from_keyboard.cpp
        input_from_keyboard.h
        sort.cpp
        sort.h
        selection_according_to_conditions.cpp
        selection_according_to_conditions.h
        output_to_file.cpp
        output_to_file.h
        output_to_file.cpp
)
